mahjong, deck info
